--- a/IC23_analysis.ipynb
+++ b/IC23_analysis.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "7rmYfmfWwlj_"
       },
@@ -59,8 +59,8 @@
     {
       "cell_type": "code",
       "source": [
-        "! git clone https://github.com/osullik/ic23050.git\n",
-        "! git pull"
+        "# ! git clone https://github.com/osullik/ic23050.git\n",
+        "# ! git pull"
       ],
       "metadata": {
         "colab": {
@@ -69,7 +69,7 @@
         "id": "qy7UI2IM4hy5",
         "outputId": "59c020ee-6de9-453a-8167-e7a68167dd7b"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +100,7 @@
       "metadata": {
         "id": "7279FDzz1TUJ"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -114,7 +114,7 @@
       "metadata": {
         "id": "1R3lvlLl0sZ2"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +130,7 @@
         "id": "QTRokxI1wt3o",
         "outputId": "e68da8ea-ee0b-4330-d155-6021b9149fdf"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
