--- a/IC23_analysis.ipynb
+++ b/IC23_analysis.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 1,
       "metadata": {
         "id": "7rmYfmfWwlj_"
       },
@@ -53,10 +53,23 @@
         "%cd gdrive/My Drive/Colab Notebooks/IC23/"
       ],
       "metadata": {
-        "id": "ifYU5iOM5WIF"
+        "id": "ifYU5iOM5WIF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "46fdea57-2ec8-45d4-ff8d-9d06d5ac1cde"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n",
+            "/content/gdrive/My Drive/Colab Notebooks/IC23\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -65,25 +78,10 @@
         "#! git pull"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qy7UI2IM4hy5",
-        "outputId": "59c020ee-6de9-453a-8167-e7a68167dd7b"
+        "id": "qy7UI2IM4hy5"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Cloning into 'ic23050'...\n",
-            "fatal: could not read Username for 'https://github.com': No such device or address\n",
-            "fatal: not a git repository (or any parent up to mount point /content)\n",
-            "Stopping at filesystem boundary (GIT_DISCOVERY_ACROSS_FILESYSTEM not set).\n"
-          ]
-        }
-      ]
+      "execution_count": 52,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -91,11 +89,11 @@
         "orig_data = pd.read_csv(\"https://raw.githubusercontent.com/osullik/ic23050/main/L4%20Washington%20Fatal%20Crash%20Files%20-%20Washington%20Traffic%20Safety%20Commission/Data_Washington%20Fatal%20Crash%20Survey.csv\")"
       ],
       "metadata": {
-        "id": "DSZz5QKFFhMq",
-        "outputId": "1c2a9e09-5788-49fb-a5a6-444d2e2ea2f5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DSZz5QKFFhMq",
+        "outputId": "1c2a9e09-5788-49fb-a5a6-444d2e2ea2f5"
       },
       "execution_count": 3,
       "outputs": [
@@ -115,12 +113,12 @@
         "orig_data.head()"
       ],
       "metadata": {
-        "id": "VEWl3w2xFvpl",
-        "outputId": "f2e7b7e7-af86-4400-f22f-9a6c57f018bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        }
+        },
+        "id": "VEWl3w2xFvpl",
+        "outputId": "f2e7b7e7-af86-4400-f22f-9a6c57f018bb"
       },
       "execution_count": 4,
       "outputs": [
@@ -525,6 +523,195 @@
         "id": "jM-ZKEHf01qu"
       },
       "execution_count": 51,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "AUGMENTING WITH OSM DATA"
+      ],
+      "metadata": {
+        "id": "YNp5V-KDXDDa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install pyrosm"
+      ],
+      "metadata": {
+        "id": "Us8qRBiOYIA3",
+        "outputId": "a5cc93fc-ab30-43c9-d770-ae6013e32806",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting pyrosm\n",
+            "  Downloading pyrosm-0.6.1.tar.gz (2.1 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m40.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
+            "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
+            "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
+            "Collecting cykhash\n",
+            "  Using cached cykhash-2.0.1-cp38-cp38-linux_x86_64.whl\n",
+            "Collecting pyrobuf\n",
+            "  Using cached pyrobuf-0.9.3-cp38-cp38-linux_x86_64.whl\n",
+            "Collecting python-rapidjson\n",
+            "  Downloading python_rapidjson-1.9-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.6 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m58.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting pygeos\n",
+            "  Downloading pygeos-0.14-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (2.2 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.2/2.2 MB\u001b[0m \u001b[31m75.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: setuptools>=18.0 in /usr/local/lib/python3.8/dist-packages (from pyrosm) (57.4.0)\n",
+            "Collecting geopandas>=0.8.0\n",
+            "  Downloading geopandas-0.12.2-py3-none-any.whl (1.1 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.1/1.1 MB\u001b[0m \u001b[31m60.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: packaging in /usr/local/lib/python3.8/dist-packages (from geopandas>=0.8.0->pyrosm) (23.0)\n",
+            "Requirement already satisfied: shapely>=1.7 in /usr/local/lib/python3.8/dist-packages (from geopandas>=0.8.0->pyrosm) (2.0.1)\n",
+            "Collecting pyproj>=2.6.1.post1\n",
+            "  Downloading pyproj-3.4.1-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (7.8 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.8/7.8 MB\u001b[0m \u001b[31m85.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting fiona>=1.8\n",
+            "  Downloading Fiona-1.9.1-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (16.0 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.0/16.0 MB\u001b[0m \u001b[31m66.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: pandas>=1.0.0 in /usr/local/lib/python3.8/dist-packages (from geopandas>=0.8.0->pyrosm) (1.3.5)\n",
+            "Requirement already satisfied: numpy>=1.13 in /usr/local/lib/python3.8/dist-packages (from pygeos->pyrosm) (1.22.4)\n",
+            "Requirement already satisfied: cython>=0.23 in /usr/local/lib/python3.8/dist-packages (from pyrobuf->pyrosm) (0.29.33)\n",
+            "Requirement already satisfied: jinja2>=2.8 in /usr/local/lib/python3.8/dist-packages (from pyrobuf->pyrosm) (2.11.3)\n",
+            "Requirement already satisfied: attrs>=19.2.0 in /usr/local/lib/python3.8/dist-packages (from fiona>=1.8->geopandas>=0.8.0->pyrosm) (22.2.0)\n",
+            "Collecting click~=8.0\n",
+            "  Downloading click-8.1.3-py3-none-any.whl (96 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m96.6/96.6 KB\u001b[0m \u001b[31m9.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting click-plugins>=1.0\n",
+            "  Downloading click_plugins-1.1.1-py2.py3-none-any.whl (7.5 kB)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.8/dist-packages (from fiona>=1.8->geopandas>=0.8.0->pyrosm) (2022.12.7)\n",
+            "Collecting munch>=2.3.2\n",
+            "  Downloading munch-2.5.0-py2.py3-none-any.whl (10 kB)\n",
+            "Collecting cligj>=0.5\n",
+            "  Downloading cligj-0.7.2-py3-none-any.whl (7.1 kB)\n",
+            "Requirement already satisfied: MarkupSafe>=0.23 in /usr/local/lib/python3.8/dist-packages (from jinja2>=2.8->pyrobuf->pyrosm) (2.0.1)\n",
+            "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.8/dist-packages (from pandas>=1.0.0->geopandas>=0.8.0->pyrosm) (2022.7.1)\n",
+            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.8/dist-packages (from pandas>=1.0.0->geopandas>=0.8.0->pyrosm) (2.8.2)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.8/dist-packages (from munch>=2.3.2->fiona>=1.8->geopandas>=0.8.0->pyrosm) (1.15.0)\n",
+            "Building wheels for collected packages: pyrosm\n",
+            "  Building wheel for pyrosm (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for pyrosm: filename=pyrosm-0.6.1-cp38-cp38-linux_x86_64.whl size=8137830 sha256=e80f785746b36a4275e7c22d81146e7a15e60b07902133c0091e732cca6eac51\n",
+            "  Stored in directory: /root/.cache/pip/wheels/58/60/9e/fa165b40f8ffb22b391c38e3e4bded072fcd75c6a3e811ee6e\n",
+            "Successfully built pyrosm\n",
+            "Installing collected packages: cykhash, python-rapidjson, pyproj, pygeos, munch, click, pyrobuf, cligj, click-plugins, fiona, geopandas, pyrosm\n",
+            "  Attempting uninstall: click\n",
+            "    Found existing installation: click 7.1.2\n",
+            "    Uninstalling click-7.1.2:\n",
+            "      Successfully uninstalled click-7.1.2\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "flask 1.1.4 requires click<8.0,>=5.1, but you have click 8.1.3 which is incompatible.\u001b[0m\u001b[31m\n",
+            "\u001b[0mSuccessfully installed click-8.1.3 click-plugins-1.1.1 cligj-0.7.2 cykhash-2.0.1 fiona-1.9.1 geopandas-0.12.2 munch-2.5.0 pygeos-0.14 pyproj-3.4.1 pyrobuf-0.9.3 pyrosm-0.6.1 python-rapidjson-1.9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyrosm import OSM\n",
+        "from pyrosm import get_data\n",
+        "from pyrosm.data import sources"
+      ],
+      "metadata": {
+        "id": "MyfOj17EYDdS",
+        "outputId": "d5eca308-a764-4cc1-e9a7-ff3326d2eeab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.8/dist-packages/geopandas/_compat.py:123: UserWarning: The Shapely GEOS version (3.11.1-CAPI-1.17.1) is incompatible with the GEOS version PyGEOS was compiled with (3.10.4-CAPI-1.16.2). Conversions between both will be slow.\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.8/dist-packages/pyrosm/utils/__init__.py:8: UserWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas will still use PyGEOS by default for now. To force to use and test Shapely 2.0, you have to set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
+            "\n",
+            "import os\n",
+            "os.environ['USE_PYGEOS'] = '0'\n",
+            "import geopandas\n",
+            "\n",
+            "In a future release, GeoPandas will switch to using Shapely by default. If you are using PyGEOS directly (calling PyGEOS functions on geometries from GeoPandas), this will then stop working and you are encouraged to migrate from PyGEOS to Shapely 2.0 (https://shapely.readthedocs.io/en/latest/migration_pygeos.html).\n",
+            "  import geopandas as gpd\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_with_zip = pd.read_csv('https://raw.githubusercontent.com/osullik/ic23050/main/L4%20Washington%20Fatal%20Crash%20Files%20-%20Washington%20Traffic%20Safety%20Commission/Data_Washington_Fatal_Crash_Survey_with_zip.csv')"
+      ],
+      "metadata": {
+        "id": "2OZ8MHwHXG_u",
+        "outputId": "520d40e3-5c68-446f-b234-d07d3c87c4ce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.8/dist-packages/IPython/core/interactiveshell.py:3326: DtypeWarning: Columns (22,23,24,302,304) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+            "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Grab OSM data from pyrosm\n",
+        "fp = get_data(\"washington\") # AKA sources.north_america.usa.washington also at '/content/gdrive/My Drive/Colab Notebooks/IC23/washington-latest.osm.bz2'\n",
+        "\n",
+        "# Initialize the OSM parser object\n",
+        "osm = OSM(fp)"
+      ],
+      "metadata": {
+        "id": "6iJkQm6BXXGQ"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Read all drivable roads\n",
+        "drive_net = osm.get_network(network_type=\"driving\")\n",
+        "drive_net.plot()"
+      ],
+      "metadata": {
+        "id": "cdvFls1ub6Ba"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "drive_net.head(2)"
+      ],
+      "metadata": {
+        "id": "DLvzmewYa0nP"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
