--- a/IC23_analysis.ipynb
+++ b/IC23_analysis.ipynb
@@ -540,11 +540,11 @@
         "!pip install pyrosm"
       ],
       "metadata": {
-        "id": "Us8qRBiOYIA3",
-        "outputId": "a5cc93fc-ab30-43c9-d770-ae6013e32806",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Us8qRBiOYIA3",
+        "outputId": "a5cc93fc-ab30-43c9-d770-ae6013e32806"
       },
       "execution_count": 56,
       "outputs": [
@@ -625,11 +625,11 @@
         "from pyrosm.data import sources"
       ],
       "metadata": {
-        "id": "MyfOj17EYDdS",
-        "outputId": "d5eca308-a764-4cc1-e9a7-ff3326d2eeab",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MyfOj17EYDdS",
+        "outputId": "d5eca308-a764-4cc1-e9a7-ff3326d2eeab"
       },
       "execution_count": 3,
       "outputs": [
@@ -657,11 +657,11 @@
         "data_with_zip = pd.read_csv('https://raw.githubusercontent.com/osullik/ic23050/main/L4%20Washington%20Fatal%20Crash%20Files%20-%20Washington%20Traffic%20Safety%20Commission/Data_Washington_Fatal_Crash_Survey_with_zip.csv')"
       ],
       "metadata": {
-        "id": "2OZ8MHwHXG_u",
-        "outputId": "520d40e3-5c68-446f-b234-d07d3c87c4ce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2OZ8MHwHXG_u",
+        "outputId": "520d40e3-5c68-446f-b234-d07d3c87c4ce"
       },
       "execution_count": 4,
       "outputs": [
@@ -713,6 +713,102 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "AUGMENT ZIPCODES WITH DEMOGRAPHICS"
+      ],
+      "metadata": {
+        "id": "Knr6YlHChgyO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install uszipcode"
+      ],
+      "metadata": {
+        "id": "wmIepVJNhkcr",
+        "outputId": "f0ac9eb6-6746-48fd-ccba-362757fe79ef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting uszipcode\n",
+            "  Downloading uszipcode-1.0.1-py2.py3-none-any.whl (35 kB)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.8/dist-packages (from uszipcode) (2.25.1)\n",
+            "Collecting pathlib-mate\n",
+            "  Downloading pathlib_mate-1.2.1-py2.py3-none-any.whl (121 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m121.5/121.5 KB\u001b[0m \u001b[31m9.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: attrs in /usr/local/lib/python3.8/dist-packages (from uszipcode) (22.2.0)\n",
+            "Collecting haversine>=2.5.0\n",
+            "  Downloading haversine-2.7.0-py2.py3-none-any.whl (6.9 kB)\n",
+            "Requirement already satisfied: SQLAlchemy>=1.4.0 in /usr/local/lib/python3.8/dist-packages (from uszipcode) (1.4.46)\n",
+            "Collecting fuzzywuzzy\n",
+            "  Downloading fuzzywuzzy-0.18.0-py2.py3-none-any.whl (18 kB)\n",
+            "Requirement already satisfied: atomicwrites in /usr/local/lib/python3.8/dist-packages (from uszipcode) (1.4.1)\n",
+            "Collecting sqlalchemy-mate>=1.4.28.3\n",
+            "  Downloading sqlalchemy_mate-1.4.28.3-py2.py3-none-any.whl (76 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.4/76.4 KB\u001b[0m \u001b[31m7.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: greenlet!=0.4.17 in /usr/local/lib/python3.8/dist-packages (from SQLAlchemy>=1.4.0->uszipcode) (2.0.2)\n",
+            "Requirement already satisfied: prettytable in /usr/local/lib/python3.8/dist-packages (from sqlalchemy-mate>=1.4.28.3->uszipcode) (3.6.0)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.8/dist-packages (from pathlib-mate->uszipcode) (1.15.0)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.8/dist-packages (from requests->uszipcode) (1.24.3)\n",
+            "Requirement already satisfied: chardet<5,>=3.0.2 in /usr/local/lib/python3.8/dist-packages (from requests->uszipcode) (4.0.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.8/dist-packages (from requests->uszipcode) (2022.12.7)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.8/dist-packages (from requests->uszipcode) (2.10)\n",
+            "Requirement already satisfied: wcwidth in /usr/local/lib/python3.8/dist-packages (from prettytable->sqlalchemy-mate>=1.4.28.3->uszipcode) (0.2.6)\n",
+            "Installing collected packages: fuzzywuzzy, pathlib-mate, haversine, sqlalchemy-mate, uszipcode\n",
+            "Successfully installed fuzzywuzzy-0.18.0 haversine-2.7.0 pathlib-mate-1.2.1 sqlalchemy-mate-1.4.28.3 uszipcode-1.0.1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from uszipcode import SearchEngine  # data.census.gov"
+      ],
+      "metadata": {
+        "id": "EQYwMLh_hphD"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def augment_zip(zipcode):\n",
+        "  aug_zip = SearchEngine().by_zipcode(zipcode)\n",
+        "  return aug_zip.zipcode, aug_zip.major_city, aug_zip.population  # TODO edit fields to be what we want to add to the data listed here: https://uszipcode.readthedocs.io/\n",
+        "\n",
+        "print(augment_zip(11790))"
+      ],
+      "metadata": {
+        "id": "5G82t0JmjRCI",
+        "outputId": "db920bba-3b4c-4f43-b837-5207bfa1519a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('11790', 'Stony Brook', 18511)\n"
+          ]
+        }
+      ]
     }
   ]
 }
